ice-blast page cheched

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <div class="row lg_py_100_80 md_80_80 sm_60_60 py_40">
                     <div data-aos="fade-right" class="col-lg-6 col-12 d-flex justify-content-center">
                         <div>
-                            <h2 class="font_titling fw-bold md_lh_57 lh_43 clr-primary-black max_351 mb-0">The Future of Car
+                            <h2 class="font_titling fw-bold text-48 md_lh_57 lh_43 clr-primary-black max_351 mb-0">The Future of Car
                                 Cleaning</h2>
                             <p class="font_acumin-pro fw-normal text-16 lh_24 clr-primary-black opacity_70 max_558 pt_13">No
                                 need to be overwhelmed by the thought of harsh chemicals and abrasive cleaning methods. Our
@@ -267,7 +267,7 @@
             </div>
         </section>
         <!-- dry-icing blasting -->
-        <section class="bg-color1 position-relative z-3 mt_1" id="services">
+        <section class="bg-color1 position-relative z-3 mt_1 mb_50" id="services">
             <div class="mt_1 mx-auto height_264"><img src="./assets/images/webp/top-ector.webp" alt="topvector"
                     class="w-100 h-100 mt_1"></div>
             <div class="container">
@@ -375,7 +375,7 @@
             </div>
         </section>
         <!-- behind-the scenes -->
-        <section class="bg_imagebehind" id="blog">
+        <section class="bg_imagebehind mb_50" id="blog">
             <div class="blank"><img src="/assets/images/webp/top-vecror2.webp" alt="topvector" class="w-100 mt_2 height_264">
             </div>
             <div class="container">
@@ -538,7 +538,7 @@
             </div>
         </section>
         <!-- slider-section -->
-        <section class="bg-color1 position-relative z-2 mt_1 carousel-section overflow-hidden mb_1">
+        <section class="bg-color1 position-relative z-2 mt_1 carousel-section overflow-hidden mb_50">
             <div class="mt_1 mx-auto height_264"><img src="./assets/images/webp/top-ector.webp" alt="topvector"
                     class="w-100 h-100 mt_1"></div>
             <h2 class="fw-bold text-48 md_lh_57 lh_43 font_titling color_white mb-0 pb_10 text-center">See Our Latest
@@ -877,7 +877,7 @@
             <img src="./assets/images/png/backprime_topvector.png" alt="primetopvector" class="w-100 height_440">
             <div class="container">
                 <div data-aos="zoom-out"
-                    class="d-flex justify-content-center flex-column align-items-center position-relative z-3">
+                    class="d-flex justify-content-center flex-column align-items-center position-relative z-3 my_100">
                     <h2 class="fw-bold text-48 md_lh_57 lh_43 font_titling clr-primary-black mb-0 pb_10 text-center">Blast
                         The Grime and
                         Bring Back The Prime</h2>
@@ -952,7 +952,7 @@
             </div>
         </section>
         <!-- Join Our Mailing List -->
-        <section class="pt_58" id="contact">
+        <section class="pt_100" id="contact">
             <div class="mb_100">
                 <div class="container">
                     <div data-aos="zoom-out" class="mail_box d-flex justify-content-center mx-auto position-relative">
