--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             </div>
         </header>
         <!-- cloud-section car-cleaning -->
-        <section class="cloud-bg position-relative z-3" id="about">
+        <section class="cloud-bg position-relative z-3 .." id="about">
             <div class="container">
                 <div class="row flex-lg-row flex-column-reverse lg_py_100_80 md_80_80 sm_60_60 py_40">
                     <div data-aos="fade-right" class="col-lg-6 col-12 d-flex justify-content-center">
@@ -270,7 +270,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="d-flex justify-content-center align-items-center flex-column">
+                <div class="d-flex justify-content-center align-items-center flex-column mb_19">
                     <p class="fw-bold text-16 lh_24 font_acumin-pro clr-primary-black mb_20">Like What You See? Get an
                         Instant Quote</p>
                     <button
@@ -280,7 +280,7 @@
             </div>
         </section>
         <!-- dry-icing blasting -->
-        <section class="bg-color1 position-relative z-3 mt_1 mb_50" id="services">
+        <section class="bg-color1 position-relative z-3 mt_1 mb_100" id="services">
             <div class="mt_1 mx-auto height_264"><img src="./assets/images/webp/top-ector.webp" alt="topvector"
                     class="w-100 mt_1"></div>
             <div class="container">
@@ -449,7 +449,7 @@
                     class="w-100 height_440 mb_1"></div>
         </section>
         <!-- Let's Talk Numbers accordion1 -->
-        <section>
+        <section class="mt_100">
             <div class="container">
                 <div class="mb-5">
                     <h2 class="fw-bold text-48 md_lh_57 lh_43 font_titling clr-primary-black text-center">Let's Talk
@@ -565,7 +565,7 @@
             </div>
         </section>
         <!-- quote-today-->
-        <section class="py_40 position-relative z-3 mb-1">
+        <section class="py_40 position-relative z-3 mt-1 mb_6">
             <div class="container">
                 <div data-aos="zoom-in" class="quote-box mx-auto">
                     <h3 class="font_titling fw-bold text-32 sm_lh_44 lh_34 clr-primary-black text-center">Get an Instant
@@ -588,7 +588,7 @@
         </section>
         <!-- slider-section -->
         <section class="bg-color1 position-relative z-2 mt_1 carousel-section overflow-hidden mb_50">
-            <div class="mt_1 mx-auto height_264"><img src="./assets/images/webp/top-ector.webp" alt="topvector"
+            <div class="mx-auto height_264"><img src="./assets/images/webp/top-ector.webp" alt="topvector"
                     class="w-100 h-100 mt_3"></div>
             <h2 class="fw-bold text-48 md_lh_57 lh_43 font_titling color_white mb-0 pb_10 text-center">See Our Latest
                 Work</h2>
@@ -636,12 +636,12 @@
                     </svg>
                 </button>
             </div>
-            <div class="height_440"><img src="./assets/images/webp/bottom-vector2.webp" alt="bottomvector"
+            <div class="height_440 mb_15"><img src="./assets/images/webp/bottom-vector2.webp" alt="bottomvector"
                     class="w-100 mb_1">
             </div>
         </section>
         <!-- meet-the team -->
-        <section class="pt-5 pt-sm-0 position-relative mt_100">
+        <section class="pt_76 position-relative">
             <div class="container position-relative z-3">
                 <div class="row">
                     <div data-aos="fade-right" class="col-lg-6 col-12 d-flex justify-content-center">
